tests/interpreter/pass/027-array-simple.hyg
let arr: array {int} = array(2 + 2, 40 + 2);
arr