tests/interpreter/fail/029-array-assign-slice-out-of-lower-bound.hyg
let arr: array {int} = array(2, 1);
// Assign a sliced array
let mutable index: int = 2 - 3;
let sliced: array {int} = arraySlice(arr, index, 3);
print("should not print!")